--- a/code_responsive-main/index.html
+++ b/code_responsive-main/index.html
@@ -40,7 +40,7 @@
           </div>
         <div class="col-lg-6 col-sm-12 d-flex item">
           <div><img src="./images/praktiki-tedris-metodu-300x300.jpg"  alt=""></div>
-          <div style="box-sizing: border-box;"><h4>Praktiki tədris metodu</h4>
+          <div ><h4>Praktiki tədris metodu</h4>
             <P>Hər hansı bir peşəni yaxşı bacarmaq üçün yalnız öyrənmək kifayət deyil, gərək öyrəndiklərinizi tətbiq edə bilmə bacarığına da yiyələnib təcrübə toplayasınız. Buna görə Code Academy-nin</P>
             <h5>Ətraflı</h5>
           </div>
